finished vehiclesDAO+menu layouts; sales+lease wip